--- a/pinch/static/css/sass/pinch.scss
+++ b/pinch/static/css/sass/pinch.scss
@@ -1,5 +1,6 @@
 // customize bootstrap variables here:
 @import "variables";
+@import "gravity_board";
 @import "bootstrap";
 
 button[type="submit"] {
