--- a/pinch/templates/gravity_board.html
+++ b/pinch/templates/gravity_board.html
@@ -1,6 +1,277 @@
 {% extends "base.html" %}
 
   {% block content %}
-      <h1>{% block page_title %}Gravity Board{% endblock page_title %}</h1>
-      <p></p>
+      <div id="gravity-board">
+      	<div class="columns-container">
+      		<div class="columns-container-scroller">
+      			<div class="column">
+      				<div class="column-header">
+      					<h3>Make Coffee</h3>
+      				</div>
+      				<div class="column-scroller">
+      				</div>
+      			</div>
+      			<div class="column">
+      				<div class="column-header">
+      					<h3>Random Tasks</h3>
+      				</div>
+      				<div class="column-scroller">
+      					<div class="lane ready">
+      						<div class="lane-header">
+      							<h4>Ready</h4>
+      						</div>
+      						<div class="tickets clearfix">
+	      						<div class="ticket">Stuff</div>
+	      						<div class="ticket">My cool ticket</div>
+	      					</div>
+      					</div>
+      					<div class="lane doing">
+      						<div class="lane-header">
+      							<h4>Doing</h4>
+      						</div>
+      						<div class="tickets clearfix">
+      							<div class="ticket">Take out the trash</div>
+      						</div>
+      					</div>
+      					<div class="lane done">
+      						<div class="lane-header">
+      							<h4>Done!</h4>
+      						</div>
+      						<div class="tickets clearfix">
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      						</div>
+      					</div>
+      				</div>
+      			</div>
+
+      			<div class="column">
+      				<div class="column-header">
+      					<h3>Random Tasks</h3>
+      				</div>
+      				<div class="column-scroller">
+      					<div class="lane ready">
+      						<div class="lane-header">
+      							<h4>Ready</h4>
+      						</div>
+      						<div class="tickets clearfix">
+	      						<div class="ticket">Stuff</div>
+	      						<div class="ticket">My cool ticket</div>
+	      					</div>
+      					</div>
+      					<div class="lane doing">
+      						<div class="lane-header">
+      							<h4>Doing</h4>
+      						</div>
+      						<div class="tickets clearfix">
+      							<div class="ticket">Take out the trash</div>
+      						</div>
+      					</div>
+      					<div class="lane done">
+      						<div class="lane-header">
+      							<h4>Done!</h4>
+      						</div>
+      						<div class="tickets clearfix">
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      						</div>
+      					</div>
+      				</div>
+      			</div>
+
+      			<div class="column">
+      				<div class="column-header">
+      					<h3>Random Tasks</h3>
+      				</div>
+      				<div class="column-scroller">
+      					<div class="lane ready">
+      						<div class="lane-header">
+      							<h4>Ready</h4>
+      						</div>
+      						<div class="tickets clearfix">
+	      						<div class="ticket">Stuff</div>
+	      						<div class="ticket">My cool ticket</div>
+	      					</div>
+      					</div>
+      					<div class="lane doing">
+      						<div class="lane-header">
+      							<h4>Doing</h4>
+      						</div>
+      						<div class="tickets clearfix">
+      							<div class="ticket">Take out the trash</div>
+      						</div>
+      					</div>
+      					<div class="lane done">
+      						<div class="lane-header">
+      							<h4>Done!</h4>
+      						</div>
+      						<div class="tickets clearfix">
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      						</div>
+      					</div>
+      				</div>
+      			</div>
+
+      			<div class="column">
+      				<div class="column-header">
+      					<h3>Random Tasks</h3>
+      				</div>
+      				<div class="column-scroller">
+      					<div class="lane ready">
+      						<div class="lane-header">
+      							<h4>Ready</h4>
+      						</div>
+      						<div class="tickets clearfix">
+	      						<div class="ticket">Stuff</div>
+	      						<div class="ticket">My cool ticket</div>
+	      					</div>
+      					</div>
+      					<div class="lane doing">
+      						<div class="lane-header">
+      							<h4>Doing</h4>
+      						</div>
+      						<div class="tickets clearfix">
+      							<div class="ticket">Take out the trash</div>
+      						</div>
+      					</div>
+      					<div class="lane done">
+      						<div class="lane-header">
+      							<h4>Done!</h4>
+      						</div>
+      						<div class="tickets clearfix">
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      						</div>
+      					</div>
+      				</div>
+      			</div>
+
+      			<div class="column">
+      				<div class="column-header">
+      					<h3>Random Tasks</h3>
+      				</div>
+      				<div class="column-scroller">
+      					<div class="lane ready">
+      						<div class="lane-header">
+      							<h4>Ready</h4>
+      						</div>
+      						<div class="tickets clearfix">
+	      						<div class="ticket">Stuff</div>
+	      						<div class="ticket">My cool ticket</div>
+	      					</div>
+      					</div>
+      					<div class="lane doing">
+      						<div class="lane-header">
+      							<h4>Doing</h4>
+      						</div>
+      						<div class="tickets clearfix">
+      							<div class="ticket">Take out the trash</div>
+      						</div>
+      					</div>
+      					<div class="lane done">
+      						<div class="lane-header">
+      							<h4>Done!</h4>
+      						</div>
+      						<div class="tickets clearfix">
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      						</div>
+      					</div>
+      				</div>
+      			</div>
+
+      			<div class="column">
+      				<div class="column-header">
+      					<h3>Random Tasks</h3>
+      				</div>
+      				<div class="column-scroller">
+      					<div class="lane ready">
+      						<div class="lane-header">
+      							<h4>Ready</h4>
+      						</div>
+      						<div class="tickets clearfix">
+	      						<div class="ticket">Stuff</div>
+	      						<div class="ticket">My cool ticket</div>
+	      					</div>
+      					</div>
+      					<div class="lane doing">
+      						<div class="lane-header">
+      							<h4>Doing</h4>
+      						</div>
+      						<div class="tickets clearfix">
+      							<div class="ticket">Take out the trash</div>
+      						</div>
+      					</div>
+      					<div class="lane done">
+      						<div class="lane-header">
+      							<h4>Done!</h4>
+      						</div>
+      						<div class="tickets clearfix">
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      							<div class="ticket">Moar stuff</div>
+      						</div>
+      					</div>
+      				</div>
+      			</div>
+
+
+
+      		</div>
+      	</div>
+      </div>
   {% endblock content %}
