--- a/pinch/templates/gravity_board.html
+++ b/pinch/templates/gravity_board.html
@@ -2,276 +2,107 @@
 
   {% block content %}
       <div id="gravity-board">
-      	<div class="columns-container">
-      		<div class="columns-container-scroller">
-      			<div class="column">
-      				<div class="column-header">
-      					<h3>Make Coffee</h3>
-      				</div>
-      				<div class="column-scroller">
-      				</div>
-      			</div>
-      			<div class="column">
-      				<div class="column-header">
-      					<h3>Random Tasks</h3>
-      				</div>
-      				<div class="column-scroller">
-      					<div class="lane ready">
-      						<div class="lane-header">
-      							<h4>Ready</h4>
-      						</div>
-      						<div class="tickets clearfix">
-	      						<div class="ticket">Stuff</div>
-	      						<div class="ticket">My cool ticket</div>
-	      					</div>
-      					</div>
-      					<div class="lane doing">
-      						<div class="lane-header">
-      							<h4>Doing</h4>
-      						</div>
-      						<div class="tickets clearfix">
-      							<div class="ticket">Take out the trash</div>
-      						</div>
-      					</div>
-      					<div class="lane done">
-      						<div class="lane-header">
-      							<h4>Done!</h4>
-      						</div>
-      						<div class="tickets clearfix">
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      						</div>
-      					</div>
-      				</div>
-      			</div>
-
-      			<div class="column">
-      				<div class="column-header">
-      					<h3>Random Tasks</h3>
-      				</div>
-      				<div class="column-scroller">
-      					<div class="lane ready">
-      						<div class="lane-header">
-      							<h4>Ready</h4>
-      						</div>
-      						<div class="tickets clearfix">
-	      						<div class="ticket">Stuff</div>
-	      						<div class="ticket">My cool ticket</div>
-	      					</div>
-      					</div>
-      					<div class="lane doing">
-      						<div class="lane-header">
-      							<h4>Doing</h4>
-      						</div>
-      						<div class="tickets clearfix">
-      							<div class="ticket">Take out the trash</div>
-      						</div>
-      					</div>
-      					<div class="lane done">
-      						<div class="lane-header">
-      							<h4>Done!</h4>
-      						</div>
-      						<div class="tickets clearfix">
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      						</div>
-      					</div>
-      				</div>
-      			</div>
-
-      			<div class="column">
-      				<div class="column-header">
-      					<h3>Random Tasks</h3>
-      				</div>
-      				<div class="column-scroller">
-      					<div class="lane ready">
-      						<div class="lane-header">
-      							<h4>Ready</h4>
-      						</div>
-      						<div class="tickets clearfix">
-	      						<div class="ticket">Stuff</div>
-	      						<div class="ticket">My cool ticket</div>
-	      					</div>
-      					</div>
-      					<div class="lane doing">
-      						<div class="lane-header">
-      							<h4>Doing</h4>
-      						</div>
-      						<div class="tickets clearfix">
-      							<div class="ticket">Take out the trash</div>
-      						</div>
-      					</div>
-      					<div class="lane done">
-      						<div class="lane-header">
-      							<h4>Done!</h4>
-      						</div>
-      						<div class="tickets clearfix">
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      						</div>
-      					</div>
-      				</div>
-      			</div>
-
-      			<div class="column">
-      				<div class="column-header">
-      					<h3>Random Tasks</h3>
-      				</div>
-      				<div class="column-scroller">
-      					<div class="lane ready">
-      						<div class="lane-header">
-      							<h4>Ready</h4>
-      						</div>
-      						<div class="tickets clearfix">
-	      						<div class="ticket">Stuff</div>
-	      						<div class="ticket">My cool ticket</div>
-	      					</div>
-      					</div>
-      					<div class="lane doing">
-      						<div class="lane-header">
-      							<h4>Doing</h4>
-      						</div>
-      						<div class="tickets clearfix">
-      							<div class="ticket">Take out the trash</div>
-      						</div>
-      					</div>
-      					<div class="lane done">
-      						<div class="lane-header">
-      							<h4>Done!</h4>
-      						</div>
-      						<div class="tickets clearfix">
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      						</div>
-      					</div>
-      				</div>
-      			</div>
-
-      			<div class="column">
-      				<div class="column-header">
-      					<h3>Random Tasks</h3>
-      				</div>
-      				<div class="column-scroller">
-      					<div class="lane ready">
-      						<div class="lane-header">
-      							<h4>Ready</h4>
-      						</div>
-      						<div class="tickets clearfix">
-	      						<div class="ticket">Stuff</div>
-	      						<div class="ticket">My cool ticket</div>
-	      					</div>
-      					</div>
-      					<div class="lane doing">
-      						<div class="lane-header">
-      							<h4>Doing</h4>
-      						</div>
-      						<div class="tickets clearfix">
-      							<div class="ticket">Take out the trash</div>
-      						</div>
-      					</div>
-      					<div class="lane done">
-      						<div class="lane-header">
-      							<h4>Done!</h4>
-      						</div>
-      						<div class="tickets clearfix">
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      						</div>
-      					</div>
-      				</div>
-      			</div>
-
-      			<div class="column">
-      				<div class="column-header">
-      					<h3>Random Tasks</h3>
-      				</div>
-      				<div class="column-scroller">
-      					<div class="lane ready">
-      						<div class="lane-header">
-      							<h4>Ready</h4>
-      						</div>
-      						<div class="tickets clearfix">
-	      						<div class="ticket">Stuff</div>
-	      						<div class="ticket">My cool ticket</div>
-	      					</div>
-      					</div>
-      					<div class="lane doing">
-      						<div class="lane-header">
-      							<h4>Doing</h4>
-      						</div>
-      						<div class="tickets clearfix">
-      							<div class="ticket">Take out the trash</div>
-      						</div>
-      					</div>
-      					<div class="lane done">
-      						<div class="lane-header">
-      							<h4>Done!</h4>
-      						</div>
-      						<div class="tickets clearfix">
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      							<div class="ticket">Moar stuff</div>
-      						</div>
-      					</div>
-      				</div>
-      			</div>
-
-
-
+      	<!-- READY -->
+      	<div class="lane ready">
+      		<div class="header">
+      			<h3>Ready</h3>
       		</div>
+  			<ul class="task-columns">
+  				<li>
+  					<div class="task-header">
+  						<h4>Make coffee</h4>
+  					</div>
+  					<div class="ticket">This is my task</div>
+  				</li>
+  				<li>
+  					<div class="task-header">
+  						<h4>Cook breakfast</h4>
+  					</div>
+  					<div class="ticket">This is my other task</div>
+  					<div class="ticket">This is my other task</div>
+  					<div class="ticket">This is my other task</div>
+  				</li>
+  				<li>
+  					<div class="task-header">
+  						<h4>Clean house</h4>
+  					</div>
+  					<div class="ticket">This is my final task</div>
+  				</li>
+  				<li>
+  					<div class="task-header">
+  						<h4>Watch TV</h4>
+  					</div>
+  					<div class="ticket">This is my final task</div>
+  				</li>
+  			</ul>
+      	</div>
+      	<!-- DOING -->
+      	<div class="lane doing">
+      		<div class="header">
+      			<h3>Doing</h3>
+      		</div>
+  			<ul class="task-columns">
+  				<li>
+  					<div class="task-header">
+  						<h4>Make coffee</h4>
+  					</div>
+  					<div class="ticket">This is my task</div>
+  				</li>
+  				<li>
+  					<div class="task-header">
+  						<h4>Cook breakfast</h4>
+  					</div>
+  					<div class="ticket">This is my other task</div>
+  					<div class="ticket">This is my other task</div>
+  					<div class="ticket">This is my other task</div>
+  				</li>
+  				<li>
+  					<div class="task-header">
+  						<h4>Clean house</h4>
+  					</div>
+  					<div class="ticket">This is my final task</div>
+  				</li>
+  				<li>
+  					<div class="task-header">
+  						<h4>Watch TV</h4>
+  					</div>
+  					<div class="ticket">This is my final task</div>
+  				</li>
+  			</ul>
+      	</div>
+      	<!-- DONE! -->
+      	<div class="lane done">
+      		<div class="header">
+      			<h3>Done</h3>
+      		</div>
+  			<ul class="task-columns">
+  				<li>
+  					<div class="task-header">
+  						<h4>Make coffee</h4>
+  					</div>
+  					<div class="ticket">This is my task</div>
+  				</li>
+  				<li>
+  					<div class="task-header">
+  						<h4>Cook breakfast</h4>
+  					</div>
+  					<div class="ticket">This is my other task</div>
+  					<div class="ticket">This is my other task</div>
+  					<div class="ticket">This is my other task</div>
+  				</li>
+  				<li>
+  					<div class="task-header">
+  						<h4>Clean house</h4>
+  					</div>
+  					<div class="ticket">This is my final task</div>
+  				</li>
+  				<li>
+  					<div class="task-header">
+  						<h4>Watch TV</h4>
+  					</div>
+  					<div class="ticket">This is my final task</div>
+  				</li>
+  			</ul>
       	</div>
       </div>
   {% endblock content %}
