--- a/pinch/templates/minify_mvp.html
+++ b/pinch/templates/minify_mvp.html
@@ -11,6 +11,7 @@
 
               <form id="main_form" role="form" method="post">
                   {% csrf_token %}
+                  <input type="hidden" name="redactions" id="selections" value="{{ selectionJson }}">
                   <div>
                       <textarea id="strike_statement">{{ project.mvp.original_statement }}</textarea>
                   </div>
