--- a/pinch/templates/base.html
+++ b/pinch/templates/base.html
@@ -9,6 +9,7 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
+    <link rel="icon" type="image/png" href="/static/images/favicon.png" />
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,200italic,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/codemirror.css' %}" rel="stylesheet">
