upgrades to sass, venn page, idea page

--- a/pinch/templates/big_idea.html
+++ b/pinch/templates/big_idea.html
@@ -38,12 +38,10 @@
 
         <div class="col-md-3">
           <div class="info-panel">
-            <h3>Tips</h3>
+            <h3>5-15 Minutes</h3>
             <p>Share your idea with the team, get some buy-in.</p>
-            <p>Timebox your effort, there should be a short deadline.</p>
-            <ul>
-              <li>2-10 Working Days is the recommended timebox for Pinch. Longer projects will benefit from more robust planning.</li>
-            </ul>
+            <p>Timebox your effort, there should be a short deadline.
+            2-10 Working Days is the recommended timebox for Pinch.</p>
             <p>Choose someone in the team to facilitate Pinch.</p>
           </div>
         </div>
