--- a/pinch/templates/validate.html
+++ b/pinch/templates/validate.html
@@ -10,7 +10,7 @@
         <div class="col-md-8">
           <small>&nbsp;</small>
           <h1>{% block page_title %}Validate{% endblock page_title %} <span>5-15 Minutes</span></h1>
-          <h2><span>"Is this a project or a product?"</span> While all projects and products start with an idea, products actually have to be valuable to some identifiable market. If you want to build a product, you owe it to yourselves to find your value proposition.</h2>
+          <h2><span>"Is this a project or a product?"</span> While both start with an idea, a product requires a market to serve.  If you want to build a product, you owe it to yourself to find your value proposition.</h2>
         </div>
 
         <div class="col-md-3"></div>
@@ -45,27 +45,20 @@
 
         <div class="col-md-3">
           <div class="info-panel">
-            <h3>Tips</h3>
-            <p>Start thinking about your potential customers. Who are they?</p>
-            <ul>
-              <li>What problems do they have? What benefits do they want?</li>
-              <li>How will what you are building be valuable to these customers?</li>
-            </ul>
-            <p>Find your value proposition.</p>
-            <ul>
-              <li>Draw two intersecting circles (venn diagram).</li>
-              <li>In the right circle, define your customer.<br>ex. "Tech Savvy Entrepreneurs"</li>
+			<h3>5-15 Minutes</h3>
+			<p>In the right circle, define your customer.</p>
+			<p class="example">"Tech Savvy Entrepreneurs"</p>
+			
+			<p>In the left circle, define what you intend to offer the customer.</p>
+			<p class="example">"Theory and framework that expedites planning and delivery of products"</p> 			 
+		    <p>In the intersect, find your value proposition by matching your 
+				customers to what you are offering. Value Propositions can be simply worded at first:</p>
+            <p class="example">"Our product helps tech savvy entrepreneurs plan and 
+				  deliver working products quickly."</p>
 
-              <li>In the left circle, define what you intend to offer the customer.<br>ex. "Theory and framework that expedites planning and delivery of products"</li>
-
-              <li>Once complete, find your value proposition by matching your customers to what you are offering.</li>
-            </ul>
-            <p>Value Propositions can be simply worded at first:</p>
-            <ul>
-              <li>"Our product helps tech savvy entrepreneurs plan and deliver working products quickly."</li>
-            </ul>
           </div>
         </div>
 
       </div>
+	  
   {% endblock content %}
