--- a/pinch/templates/base.html
+++ b/pinch/templates/base.html
@@ -13,6 +13,7 @@
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,200italic,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/codemirror.css' %}" rel="stylesheet">
+    <link href="{% static 'css/jquery.gridly.css' %}" rel="stylesheet">
 
     <style>
       body {
@@ -76,6 +77,8 @@
     <script src="{% static 'js/jquery-sortable.js' %}"></script>
     <script src="{% static 'js/codemirror.js' %}"></script>
     <script src="{% static 'js/underscore.js' %}"></script>
+    <script src="{% static 'js/jquery.gridly.js' %}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js" type="text/javascript"></script>
 
     <!-- place project specific Javascript in this file -->
     <script src="{% static 'js/pinch.js' %}"></script>
