--- a/pinch/templates/gravity_board.html
+++ b/pinch/templates/gravity_board.html
@@ -7,126 +7,102 @@
       		<div class="header">
       			<h3>Ready</h3>
       		</div>
-  			<div class="task-columns">
-  				<div>
+  			<ul class="task-columns">
+  				<li>
   					<div class="task-header">
   						<h4>Make coffee</h4>
   					</div>
-  					<ul>
-  						<li class="ticket">This is my task</li>
-  					</ul>
-  				</div>
-  				<div>
+  					<div class="ticket">This is my task</div>
+  				</li>
+  				<li>
   					<div class="task-header">
   						<h4>Cook breakfast</h4>
   					</div>
-  					<ul>
-  						<li class="ticket">This is my other task</li>
-  						<li class="ticket">This is my other task</li>
-  						<li class="ticket">This is my other task</li>
-  					</ul>
-  				</div>
-  				<div>
+  					<div class="ticket">This is my other task</div>
+  					<div class="ticket">This is my other task</div>
+  					<div class="ticket">This is my other task</div>
+  				</li>
+  				<li>
   					<div class="task-header">
   						<h4>Clean house</h4>
   					</div>
-  					<ul>
-  						<li class="ticket">This is my final task</li>
-  					</ul>
-  				</div>
-  				<div>
+  					<div class="ticket">This is my final task</div>
+  				</li>
+  				<li>
   					<div class="task-header">
   						<h4>Watch TV</h4>
   					</div>
-  					<ul>
-  						<li class="ticket">This is my final task</li>
-  					</ul>
-  				</div>
-  			</div>
+  					<div class="ticket">This is my final task</div>
+  				</li>
+  			</ul>
       	</div>
       	<!-- DOING -->
       	<div class="lane doing">
       		<div class="header">
       			<h3>Doing</h3>
       		</div>
-  			<div class="task-columns">
-  				<div>
+  			<ul class="task-columns">
+  				<li>
   					<div class="task-header">
   						<h4>Make coffee</h4>
   					</div>
-  					<ul>
-  						<li class="ticket">This is my task</li>
-  					</ul>
-  				</div>
-  				<div>
+  					<div class="ticket">This is my task</div>
+  				</li>
+  				<li>
   					<div class="task-header">
   						<h4>Cook breakfast</h4>
   					</div>
-  					<ul>
-	  					<li class="ticket">This is my other task</li>
-  						<li class="ticket">This is my other task</li>
-  						<li class="ticket">This is my other task</li>
-  					</ul>
-  				</div>
-  				<div>
+  					<div class="ticket">This is my other task</div>
+  					<div class="ticket">This is my other task</div>
+  					<div class="ticket">This is my other task</div>
+  				</li>
+  				<li>
   					<div class="task-header">
   						<h4>Clean house</h4>
   					</div>
-  					<ul>
-  						<li class="ticket">This is my final task</li>
-  					</ul>
-  				</div>
-  				<div>
+  					<div class="ticket">This is my final task</div>
+  				</li>
+  				<li>
   					<div class="task-header">
   						<h4>Watch TV</h4>
   					</div>
-  					<ul>
-  						<li class="ticket">This is my final task</li>
-  					</ul>
-  				</div>
-  			</div>
+  					<div class="ticket">This is my final task</div>
+  				</li>
+  			</ul>
       	</div>
       	<!-- DONE! -->
       	<div class="lane done">
       		<div class="header">
       			<h3>Done</h3>
       		</div>
-  			<div class="task-columns">
-  				<div>
+  			<ul class="task-columns">
+  				<li>
   					<div class="task-header">
   						<h4>Make coffee</h4>
   					</div>
-  					<ul>
-  						<li class="ticket">This is my task</li>
-  					</ul>
-  				</div>
-  				<div>
+  					<div class="ticket">This is my task</div>
+  				</li>
+  				<li>
   					<div class="task-header">
   						<h4>Cook breakfast</h4>
   					</div>
-  					<ul>
-  						<li class="ticket">This is my other task</li>
-  						<li class="ticket">This is my other task</li>
-  						<li class="ticket">This is my other task</li>
-  					</ul>
-  				</div>
-  				<div>
+  					<div class="ticket">This is my other task</div>
+  					<div class="ticket">This is my other task</div>
+  					<div class="ticket">This is my other task</div>
+  				</li>
+  				<li>
   					<div class="task-header">
   						<h4>Clean house</h4>
   					</div>
-  					<ul>
-  						<li class="ticket">This is my final task</li>
-  					</ul>
-  				</div>
-  				<div>
+  					<div class="ticket">This is my final task</div>
+  				</li>
+  				<li>
   					<div class="task-header">
   						<h4>Watch TV</h4>
   					</div>
-  					<ul>
-  						<li class="ticket">This is my final task</li>
-  					</ul>
-  				</div>
-  			</div>
+  					<div class="ticket">This is my final task</div>
+  				</li>
+  			</ul>
       	</div>
       </div>
   {% endblock content %}
