--- a/pinch/templates/create_mvp.html
+++ b/pinch/templates/create_mvp.html
@@ -1,25 +1,46 @@
 {% extends "base.html" %}
 
   {% block content %}
-      <div class="row">
+  
+        <div class="row">
 
-        <div class="col-md-1">Icon</div>
+        <div class="col-md-1 step-icon">
+          <div class="create_mvp"></div>
+        </div>
 
-          <div class="col-md-8">
+        <div class="col-md-8">
               <small>{{ project.name }}</small>
               <h1>{% block page_title %}Create MVP{% endblock page_title %} <span>5-15 Minutes</span></h1>
-              <h2><span>"What's the least we can do?"</span> Now that there is clarity about what we are building and who we are building it for, it's time to identify the Minimum Viable Product. For Pinch, your MVP statement needs to be a short walkthrough of your product from a client perspective.</h2>
+              <h2><span>"The MVP you want."</span> Now that there is clarity about what we are building and whom we are building it for, it's time to identify the Minimum Viable Product. For Pinch, your MVP statement needs to be a short walkthrough of your product from a client perspective.</h2>
+        </div>
+
+        <div class="col-md-3"></div>
+
+      </div>
+	    
+  
+      <div class="row">
+
+        <div class="col-md-1"></div>
+
+          <div class="col-md-8">
               <form role="form" method="post">
                   {% csrf_token %}
                   <div class="form-group">
-                      <textarea class="form-control" rows="3" name="original_statement" id="original_statement" placeholder="Our clients need to be able to...">{{ project.mvp.original_statement }}</textarea>
+                      <textarea class="form-control" rows="3" name="original_statement" id="original_statement" placeholder="A user will be able to do this, and then that, and then finally end up here."> {{ project.mvp.original_statement }} </textarea>
                   </div>
                   <button type="submit" class="btn btn-default">Next</button>
               </form>
 
         </div>
 
-        <div class="col-md-3">Info bar</div>
+        <div class="col-md-3">
+            <div class="info-panel">
+  				<h3>5-15 Minutes</h3>
+  				<p>Walk us through from start to finish, use commas to separte the different important steps.  There's no wrong answers here, but try to be consise and linear.</p>
+  				<p class="example">A user will be able to do this, and then that, and then finally end up here.</p>
+            </div>
+        </div>
 
       </div>
   {% endblock content %}
