--- a/pinch/templates/base.html
+++ b/pinch/templates/base.html
@@ -14,6 +14,7 @@
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/codemirror.css' %}" rel="stylesheet">
     <link href="{% static 'css/jquery.gridly.css' %}" rel="stylesheet">
+    <link href="{% static 'css/jquery-ui-1.10.4.min.css' %}" rel="stylesheet">
 
     <style>
       body {
@@ -87,6 +88,7 @@
     <script src="{% static 'js/codemirror.js' %}"></script>
     <script src="{% static 'js/underscore.js' %}"></script>
     <script src="{% static 'js/jquery.gridly.js' %}"></script>
+    <script src="{% static 'js/jquery-ui-1.10.4.min.js' %}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js" type="text/javascript"></script>
 
     <!-- place project specific Javascript in this file -->
